Results - Onboard fix

--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1463,7 +1463,9 @@
                   <button type="submit" class="btn btn-primary p-0 ps-2 pe-2 float-end mb-2">Submit</button>
               </form>
               
+              <div id="messageContainer"></div>
                 <div class="table-responsive">
+
                 <table id="onBoardTable" class="table table-bordered table-sm">
                  
                     <thead>
