--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1294,7 +1294,11 @@
                             </div>
                             <div id="contractgenerationContent" style="display: none;">
                               <div class="mt-3 ms-4">
-                              <h4>Contract Generation</h4>
+                                <h4>Contract Generation</h4>
+                                <select id="contractDropdown">
+                                  <option value="">Select a Company</option>
+                                  <option value="JSW JAIGARH PORT LTD">JSW JAIGARH PORT LTD</option>
+                                </select>
                               </div>
                             </div>
                             <div id="filesContent" class="container-fluid" style="display: none;">
