--- a/views/public/html/JSWINFRA-contract.html
+++ b/views/public/html/JSWINFRA-contract.html
@@ -234,17 +234,21 @@ body {
               </select>
             </td>
           </tr>
-          
-        <tr>
-            <th>Vessel</th>
-            <td >
-              <select id="vslDrop">
-                <option value="">Select a Vessel</option>
-                <!-- Ports will be populated here -->
-              </select>
+          <tr>
+            <td colspan="4">for service onboard MV
+                <select id="vslDrop">
+                    <option value="">Select a Vessel</option>
+                    <!-- Ports will be populated here -->
+                </select>
+                of Flag
+                <input type="text" style="width: 100px;" placeholder="Flag"> , IMO Nbr:
+                <input type="text" style="width: 100px;" placeholder="IMO number">
             </td>
-          
         </tr>
+        
+           
+          
+       
         <tr>
             <th>Vessel Type</th>
             <td >
