--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -116,6 +116,10 @@
     
 
         <form id="evaluationForm">
+          <div class="d-flex justify-content-center" id="imageContainer" >
+            <img id="img" style="height: 100px;width: 100px;border: solid 1px grey;"/>
+                   
+                   </div>
             <div class="form-group">
                 <label for="fullName">Family Name & Given Name</label>
                 <input type="text" readonly class="form-control" id="fullName" >
@@ -919,18 +923,12 @@ SIRE/CDI experience Right ship
             <div class="col-md-4">
               <div class="form-group">
                 <label for="grading">GRADING:</label>
-                <select class="form-control" id="grading" readonly>
+                <select class="form-control" id="grading" >
                   <option value=""></option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
+                  <option value="1">Excellent</option>
+                  <option value="2">Satisfactory</option>
+                  <option value="3">Bad</option>
+                
                 </select>
               </div>
               
@@ -958,11 +956,7 @@ SIRE/CDI experience Right ship
                 id="intName"
               />
             </div>
-            <div class="col-md-4 mb-3">
-              <small class="p-2">SIGNATURE:</small>
-              <input type="text" readonly class="form-control"  id="signNow"/>
-            </div>
-        
+           
           </div>
         </div>
         </div>
