--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -445,11 +445,11 @@
           <h5 class="form-label">TYPES OF CARGO GEARS PREVIOUSLY WORKED WITH:</h5>
           <div class="d-flex">
             <div class="form-check me-3 ">
-              <input class="form-check-input" type="checkbox" id="pumps">
+              <input class="form-check-input" type="text" id="pumps" placeholder="pumps">
               <label class="form-check-label" for="pumps">PUMPS</label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gears">
+              <input class="form-check-input" type="text" id="gears" placeholder="gears">
               <label class="form-check-label" for="gears">GEARS</label>
             </div>
           </div>
