Evaluation qualification fix

--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -1162,13 +1162,14 @@ let userData=[];
             const mobile = document.getElementById('mobile')
             const lastContract=document.getElementById('lastContract')
             const bmi = document.getElementById('vessel1')
-            
+            const qualification = document.getElementById('qualificaton')
             
 
             fullName.value=response.data.candidate.fname
             nationality.value=getNationalityName(response.data.candidate.nationality)
             mobile.value=response.data.candidate.c_mobi1
             lastContract.value=response.data.candidate.c_rank
+            qualification.value=response.data.candidate.qualifications
 
             bmi.value = (response.data.candidate.weight / (response.data.candidate.height )).toFixed(2);
 
