--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -448,7 +448,7 @@
               <input class="form-check-input" type="text" id="pumps" placeholder="pumps">
               <label class="form-check-label" for="pumps">PUMPS</label>
             </div>
-            <div class="form-check">
+            <div class="form-check ms-3">
               <input class="form-check-input" type="text" id="gears" placeholder="gears">
               <label class="form-check-label" for="gears">GEARS</label>
             </div>
