--- a/views/public/html/Evaluation-EngineOfficersForm.html
+++ b/views/public/html/Evaluation-EngineOfficersForm.html
@@ -447,12 +447,16 @@
           <h5 class="form-label">TYPES OF CARGO GEARS PREVIOUSLY WORKED WITH:</h5>
           <div class="d-flex">
             <div class="form-check me-3 ">
-              <input class="form-check-input" type="checkbox" id="pumps">
+              <input class="form-check-input" type="text" id="pumps" placeholder="pumps">
               <label class="form-check-label" for="pumps">PUMPS</label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gears">
+              <input class="form-check-input" type="text" id="gears" placeholder="pumps">
               <label class="form-check-label" for="gears">GEARS</label>
+            </div>
+            <div class="form-check ms-3">
+              <input class="form-check-input" type="text" id="othersPG" placeholder="Others">
+              <label class="form-check-label" for="gears">Others</label>
             </div>
           </div>
         </div>
@@ -1027,7 +1031,7 @@ SIRE/CID experience
         'lastContract', 'englishGood', 'englishSatisf', 'englishPoor', 'vessel1', 'europe', 
         'usa', 'medSea', 'farEast', 'pgGoa', 'crewExperienceYes', 'crewExperienceNo', 
         'nationality1', 'cargosHandled', 'automation', 'ceInput1', 'ceInput2', 'ceInput3', 
-        'ceInput4', 'ceInput5', 'ceInput6', 'pumps', 'gears', 'drinkingYes', 'drinkingNo', 
+        'ceInput4', 'ceInput5', 'ceInput6', 'pumps', 'gears','othersPG', 'drinkingYes', 'drinkingNo', 
         'medicalYes', 'medicalNo', 'contractsNo', 'vesselServed','lastContractsignOff', 'mainExp', 'auxExp', 
         'cargoCranes', 'cargoCarried', 'cargoPumps', 'tradingArea', 'mixedCrew', 'ecdis', 
         'psc', 'sire', 'sseYes', 'sseNo', 'ecdisYes', 'ecdisNo', 'anchorYes', 'anchorNo', 
