Evaluation minor fix 4

--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -956,7 +956,7 @@ SIRE/CID experience
                   <option value=""></option>
                   <option value="1">Excellent</option>
                   <option value="2">Satisfactory</option>
-                  <option value="3">Bad</option>
+                  <option value="3">Poor</option>
                 
                 </select>
               </div>
