--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -834,7 +834,7 @@
                       <option value=""></option>
                       <option value="1">Excellent</option>
                       <option value="2">Satisfactory</option>
-                      <option value="3">Bad</option>
+                      <option value="3">Poor</option>
                     
                     </select>
                   </div>
