--- a/views/public/html/Evaluation-GalleyOfficer.html
+++ b/views/public/html/Evaluation-GalleyOfficer.html
@@ -938,7 +938,7 @@ SIRE/CDI experience Right ship
                   <option value=""></option>
                   <option value="1">Excellent</option>
                   <option value="2">Satisfactory</option>
-                  <option value="3">Bad</option>
+                  <option value="3">Poor</option>
                 
                 </select>
               </div>
