--- a/views/public/html/add-c-bank.html
+++ b/views/public/html/add-c-bank.html
@@ -18,9 +18,55 @@
     />
 
     <title> Manage Bank Details | Nsnemo</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 
+    <!-- jQuery (required for Select2) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   
     <meta name="description" content="" />
+    <style>
+      .select2{
+      width:100% !important; 
+    }
 
+    .select2-container--default .select2-selection--single {
+height: 57px; /* Adjust this height based on your native select element */
+line-height: 57px; /* Adjust this line-height to match the text vertically in the middle */
+border-radius: .25rem; /* Adjust border radius if needed */
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+line-height: 57px; /* Adjust this if needed */
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+height: 57px; /* Adjust this to match the height */
+}
+    .loader {
+      --r1: 154%;
+      --r2: 68.5%;
+      width: 60px;
+      aspect-ratio: 1;
+      border-radius: 50%; 
+      background:
+        radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+        radial-gradient(var(--r1) var(--r2) at bottom, #269af2 79.5%, #0000 80%),
+        radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+        #ccc;
+      background-size: 50.5% 220%;
+      background-position: -100% 0%, 0% 0%, 100% 0%;
+      background-repeat: no-repeat;
+      animation: l9 1.4s linear forwards;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+    
+    @keyframes l9 {
+      33%  {background-position: 0% 33%, 100% 33%, 200% 33%}
+      66%  {background-position: -100% 66%, 0% 66%, 100% 66%}
+      100% {background-position: 0% 100%, 100% 100%, 200% 100%}
+    }
+</style> 
     
 
     <!-- Fonts -->
