--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -16,7 +16,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 
+    <!-- jQuery (required for Select2) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   
     <title> Manage Document Details | Nsnemo</title>
 
     <meta name="description" content="" />
@@ -727,7 +731,21 @@
     </div>
     <!-- / Layout wrapper -->
 
-   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script>
+    $("#documentTypeDropdown").select2({
+            placeholder: "Select a Company",
+            allowClear: true
+        });
+       
+        
+       
+
+        function showReport(reportId) {
+          $('.report-content').hide(); // Hide all report contents
+          $('#' + reportId + 'Content').show(); // Show the selected report content
+        }
+      </script>
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
