--- a/views/public/html/JSWSHIPPING-contract.html
+++ b/views/public/html/JSWSHIPPING-contract.html
@@ -179,7 +179,7 @@
 															<td class="pad">
 																<div style="color:#101112;direction:ltr;font-family:Arial, Helvetica, sans-serif;font-size:15px;font-weight:400;letter-spacing:0px;line-height:120%;text-align:center;mso-line-height-alt:18px;">
 																	<p style="margin: 0; margin-bottom: 5px;">BETWEEN</p>
-																	<p style="margin: 0; margin-bottom: 5px;"><strong>JSW JAIGARH PORT LTD</strong></p>
+																	<p style="margin: 0; margin-bottom: 5px;"><strong>JSW SHIPPING & LOGISTICS PVT.LTD</strong></p>
 																	<p style="margin: 0; margin-bottom: 5px;">JSW Centre, Bandra Kurla Complex, near MMRDA Grounds, Bandra East, Mumbai – 400 051</p>
 																	<p style="margin: 0; margin-bottom: 5px;"><strong>the owner of the vessel below stated and the employer herein (the “Shipowner”)</strong></p>
 																	<p style="margin: 0; margin-bottom: 5px;">AND</p>
