--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1297,7 +1297,8 @@
                                 <h4>Contract Generation</h4>
                                 <select id="contractDropdown">
                                   <option value="">Select a Company</option>
-                                  <option value="JSW JAIGARH PORT LTD">JSW JAIGARH PORT LTD</option>
+                                  <option value="1">JSW JAIGARH PORT LTD</option>
+                                  <option value="2">JSW SHIPPING & LOGISTICS PVT LTD</option>
                                 </select>
                               </div>
                             </div>
