--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -1415,26 +1415,26 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <script>
-    $("#edit_candidate_c_rank").select2({
-            placeholder: "Select a Rank",
-            allowClear: true
-        });
-        $("#edit_candidate_nationality").select2({
-            placeholder: "Select Nationality",
-            allowClear: true
-        });
-        $("#edit_candidate_c_vessel").select2({
-            placeholder: "Select Vessel",
-            allowClear: true
-        });
-        $("#edit_candidate_grade").select2({
-            placeholder: "Select Grade",
-            allowClear: true
-        });
-        $("#edit_candidate_I_country").select2({
-            placeholder: "Select License Country",
-            allowClear: true
-        });
+    // $("#edit_candidate_c_rank").select2({
+    //         placeholder: "Select a Rank",
+    //         allowClear: true
+    //     });
+    //     $("#edit_candidate_nationality").select2({
+    //         placeholder: "Select Nationality",
+    //         allowClear: true
+    //     });
+    //     $("#edit_candidate_c_vessel").select2({
+    //         placeholder: "Select Vessel",
+    //         allowClear: true
+    //     });
+    //     $("#edit_candidate_grade").select2({
+    //         placeholder: "Select Grade",
+    //         allowClear: true
+    //     });
+    //     $("#edit_candidate_I_country").select2({
+    //         placeholder: "Select License Country",
+    //         allowClear: true
+    //     });
 
         
         
