contract generation complete

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1299,7 +1299,19 @@
                                   <option value="">Select a Company</option>
                                   <option value="1">JSW JAIGARH PORT LTD</option>
                                   <option value="2">JSW SHIPPING & LOGISTICS PVT LTD</option>
-                                </select>
+                                  <option value="3">ETERNAL LIGHT</option>
+                                  <option value="4">GARUDA</option>
+                                  <option value="5">LIBAI</option>
+                                  <option value="6">NEGMAR</option>
+                                  <option value="7">SANGLOBE</option>
+                                  <option value="8">SANMAR RAGA</option>
+                                  <option value="9">SANMAR REGENT</option>
+                                  <option value="10">SANMAR ROYAL</option>
+                                  <option value="11">SCL MERCURY</option>
+                                  <option value="12">SIVAGANGAI</option>
+                                  <option value="13">YANGTZE</option>
+                              </select>
+                              
                               </div>
                             </div>
                             <div id="filesContent" class="container-fluid" style="display: none;">
