contract generation completed fix 1

--- a/views/public/html/SANGLOBE-contract.html
+++ b/views/public/html/SANGLOBE-contract.html
@@ -247,7 +247,8 @@ u+.body .list_block ol {
                 </tr>
             </tbody>
         </table>
-        
+        <div class="page-break"></div>
+
         <p style="margin-top:0pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:6pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
         <p style="margin-top:0pt; margin-bottom:0pt; line-height:normal; widows:0; orphans:0; font-size:6pt;"><span style="font-family:'Arial Narrow';">&nbsp;</span></p>
         <ol type="1" style="margin:0pt; padding-left:0pt;">
