--- a/views/public/html/YANGTZE-contract.html
+++ b/views/public/html/YANGTZE-contract.html
@@ -77,7 +77,7 @@
 <body>
 
 <div class="container">
-    <div class="header">
+    <div class="header" style="margin-top: 150px;">
         <span style="border: 2px solid black ;padding: 5px;"><strong>NEMO ID: <span id="candidateId"></span></strong></span>
         <span style="border: 2px solid black ;margin-left: 300px;padding: 5px;"><strong>RPSL/CHN/012</strong></span>
     </div>
@@ -276,6 +276,8 @@
 <p class="western" style="line-height: 100%; orphans: 0; widows: 0"><br/>
 
 </p>
+
+<div class="page-break"></div>
 <table width="709" cellpadding="7" cellspacing="0">
 	<col width="63"/>
 	<col width="73"/>
