contract generation completed fix 5

--- a/views/public/html/add-company.html
+++ b/views/public/html/add-company.html
@@ -584,15 +584,15 @@
                               </div>
                           </div>
               
-                          <div class="mb-3 row">
+                          <div class="mb-3 row " style="display: none;">
                               <label class="col-md-2 col-form-label">Business Type</label>
                               <div class="col-md-10 d-flex align-items-center">
                                   <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" id="fms" name="business_type" value="FMS" required>
+                                      <input class="form-check-input" type="radio" id="fms" name="business_type" value="FMS" >
                                       <label class="form-check-label" for="fms">FMS</label>
                                   </div>
                                   <div class="form-check form-check-inline ms-2">
-                                      <input class="form-check-input" type="radio" id="fpp" name="business_type" value="FPP" required>
+                                      <input class="form-check-input" type="radio" id="fpp" name="business_type" value="FPP" >
                                       <label class="form-check-label" for="fpp">FPP</label>
                                   </div>
                               </div>
